--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "devDependencies": {
+    "@types/c3": "^0.7.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.0.0",
     "eslint": "^6.0.1",
@@ -25,9 +26,11 @@
     "jest-preset-preact": "^1.0.0",
     "preact-cli": "^3.0.0",
     "prettier": "^2.2.1",
-    "sirv-cli": "1.0.3"
+    "sirv-cli": "1.0.3",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
+    "c3": "^0.7.20",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1"
