--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
+data/
+build/
+size-plugin.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,visualstudiocode
-data/
 
 ### macOS ###
 # General
