--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build --no-prerender",
+    "build": "preact build --no-prerender --sw false --esm false",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint src",
@@ -17,7 +17,7 @@
     ]
   },
   "devDependencies": {
-    "@types/c3": "^0.7.5",
+    "@types/lodash": "^4.14.168",
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.0.0",
     "eslint": "^6.0.1",
@@ -30,7 +30,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "c3": "^0.7.20",
+    "billboard.js": "^3.0.2",
+    "lodash": "^4.17.21",
     "preact": "^10.3.2",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1"
